# httpServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  cert.pem  certs_gen.sh  compile_commands.json  key.pem  netprog.c  netprog.md  server  server.c
include/: errorhandling.h  server.h
src/: errorhandling.c  index.html  main.c  server.c
